--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#000000" />
     <meta name="robots" content="index, follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="dist/assets/ahmad.png" />
     <link rel="apple-touch-icon" href="dist/assets/apple-touch-icon.png" />
     <link rel="stylesheet" href="styles.css" />
