--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
               <div class="hero-btn-container">
                 <a href="mailto:ahmad.mahallawy@gmail.com" class="btn btn-one">
-                  Hire Me
+                  Contact Me
                 </a>
 
                 <a download href="dist/assets/Resume.pdf" class="btn btn-one">
