--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <p>
                   A full stack web application with authentication,
                   Conversation, Image, Code, Video and Music Generation using
-                  OpenAI (ChatGBT’s creator) and Replicate AI APIs as well as a
+                  OpenAI (ChatGPT’s creator) and Replicate AI APIs as well as a
                   chat bot
                 </p>
                 <ul class="tech-stack">
