--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <p class="info">
               I always get out of my comfort zone and take my skills to the next
               level by volunteering and doing internships to contribute as well
-              as learn from others
+              as learn from others.
             </p>
           </article>
           <div class="work-container">
