fixed mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="container">
           <article>
             <p class="subtitle">My Experience</p>
-            <h2 class="title">Companies/Organizations I worked with</h2>
+            <h2 class="title">Companies or Organizations I worked with</h2>
             <p class="info">
               I always get out of my comfort zone and take my skills to the next
               level by volunteering and doing internships to contribute as well
