--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <img src="dist/assets/bombardier.png" alt="bombardier" />
               <h3><b>Company: </b>Bombardier Inc.</h3>
               <h3><b>Duration: </b> Jan - Aug 2023</h3>
-              <h3><b>Work Type: </b>Internship</h3>
+              <h3><b>Position: </b>Software Developer Intern</h3>
               <ul>
                 <li>
                   Worked on a digital platform for the management of
@@ -202,7 +202,7 @@
               <img src="dist/assets/concordia.png" alt="bombardier" />
               <h3><b>Company: </b>Concordia University</h3>
               <h3><b>Duration: </b> September 2023 - Present</h3>
-              <h3><b>Work Type: </b>Part-time</h3>
+              <h3><b>Position: </b>Teaching Assistant</h3>
               <ul>
                 <li>
                   Conducting weekly support sessions for a group of 200
