added more experience

--- a/index.html
+++ b/index.html
@@ -218,7 +218,25 @@
                 </li>
               </ul>
             </div>
-            <div class="work-item"></div>
+            <div class="work-item hackconcordia">
+              <img src="dist/assets/hackconcordia.png" alt="bombardier" />
+              <h3><b>Organization: </b>HackConcordia</h3>
+              <h3><b>Duration: </b> April 2023 - Present</h3>
+              <h3><b>Position: </b>Director of Technology</h3>
+              <ul>
+                <li>
+                  Collaborated with a team of four as a key member of the
+                  Technology team at HackConcordia to build dynamic website for
+                  the university’s next hackathon, which is Quebec’s biggest
+                  hackathon, creating a robust platform
+                </li>
+                <li>
+                  Volunteered dedicated time and skills to help HackConcordia
+                  community in organizing and promoting the university’s
+                  hackathon event
+                </li>
+              </ul>
+            </div>
             <div class="work-item"></div>
           </div>
         </div>
